fixed many testing files